src/components/PdfDisplay.css
.page {
  @apply relative;
}

.textLayer {
  z-index: 2;
  @apply mix-blend-multiply opacity-100;
}

.textLayer ::selection {
  @apply mix-blend-multiply;
}

/* .annotationLayer {
  position: absolute;
  top: 0;

  z-index: 3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .textLayer {opacity: 0.5;}
}

